<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".activities.StartupActivity"
             android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".StartupActivity"
                android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <fragment
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/world_map__map_height"
                android:id="@+id/world_map.map"
                tools:layout="@layout/layout_frame"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/world_map.automatic.label"
                android:text="@string/world_map__searching"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin__small"
                android:layout_marginTop="@dimen/margin__big"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/world_map__to_select_manual"
                android:id="@+id/world_map__manual_selector__headline"
                android:layout_marginLeft="@dimen/margin__big"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/world_map.manual.selector"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"
                android:layout_margin="@dimen/margin__small"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/global__continue"
                android:id="@+id/world_map.to_country_detail"
                android:layout_gravity="right"
                android:paddingEnd="@dimen/margin__small"
                android:visibility="invisible"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>