<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context="net.roughdesign.canyoufeedme.fragments.AssessmentFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <fragment
                android:layout_width="match_parent"
                android:layout_height="@dimen/country_data__assessment__chart_height"
                android:name="net.roughdesign.canyoufeedme.fragments.AssessmentChartFragment"
                android:id="@+id/country_data__assessment__graphic"
                tools:layout="@layout/abc_screen_simple"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/country_data__assessment__all_in_kcal_person_day"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:baselineAligned="false"
                android:layout_margin="@dimen/margin__small"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/country_data__assessment__produced"
                        android:id="@+id/country_data__assessment.produced_headline"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/country_data__assessment.produced_value"
                        android:text="@string/global__empty_value"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/cyfm_indigo_light"/>
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/country_data__ph__1">
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:baselineAligned="false"
                android:visibility="visible">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/country_data__assessment__imported"
                        android:id="@+id/country_data__assessment.import_headline"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/global__empty_value"
                        android:id="@+id/country_data__assessment.import_value"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/cyfm_yellow_light"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/country_data__assessment__exported"
                        android:id="@+id/country_data__assessment.exported_headline"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/global__empty_value"
                        android:id="@+id/country_data__assessment.exported_value"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/cyfm_green_light"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_margin="@dimen/margin__small"
                android:baselineAligned="false"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:id="@+id/country_data__ph__2">
                </FrameLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/country_data__assessment__needed"
                        android:id="@+id/country_data__assessment.needed_headline"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/global__empty_value"
                        android:id="@+id/country_data__assessment.needed_value"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/cyfm_red_light"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/country_data__assessment__result"
                    android:id="@+id/country_data__assessment.result_headline"
                    android:layout_marginLeft="@dimen/margin__big"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/global__empty_value"
                    android:id="@+id/country_data__assessment.result_value"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/cyfm_blue_light"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
